--- a/style.css
+++ b/style.css
@@ -1,28 +1,49 @@
-body{
+body {
 
-    background: rgb(255,115,0);
-    background: linear-gradient(90deg, rgba(255,115,0,1) 0%, rgba(255,205,0,1) 50%, 
-    rgba(255,252,131,1) 100%);
+  background: rgb(255, 115, 0);
+  background: linear-gradient(90deg, rgba(255, 115, 0, 1) 0%, rgba(255, 205, 0, 1) 50%,
+      rgba(255, 252, 131, 1) 100%);
+
+}
+
+#head {
+
+  font-family: 'Autour One', sans-serif;
+  margin: 2rem;
+  text-align: center;
+  padding: 2rem;
+  width: 40rem;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 15rem 30pt;
 
 }
 
 
-#head{
+  .titulo {
 
-font-family: 'Autour One', sans-serif;
-margin: 2rem;
-text-align: center;
-padding: 2rem;
-width: 40rem;
-align-items: center;
-display: grid;
-grid-template-columns: 15rem 30pt;
+    font-family: 'Autour One', sans-serif;
+    margin: 2rem;
+    text-align: center;
+    background: rgb(255, 205, 67) 100%;
+    padding: 2rem;
+    width: 50rem;
+    border-radius: 2rem;
 
-}
+  }
+
+  img {
+
+    width: 10rem;
+    border-radius: 2rem;
+    margin-left: 5rem;
+    border-style: outset;
+  }
+
 
 .titulo {
-	-webkit-animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  -webkit-animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
 /* ----------------------------------------------
@@ -37,79 +58,59 @@ grid-template-columns: 15rem 30pt;
  * animation tracking-in-expand-fwd
  * ----------------------------------------
  */
- @-webkit-keyframes tracking-in-expand-fwd {
-    0% {
-      letter-spacing: -0.5em;
-      -webkit-transform: translateZ(-700px);
-              transform: translateZ(-700px);
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: translateZ(0);
-              transform: translateZ(0);
-      opacity: 1;
-    }
-  }
-  @keyframes tracking-in-expand-fwd {
-    0% {
-      letter-spacing: -0.5em;
-      -webkit-transform: translateZ(-700px);
-              transform: translateZ(-700px);
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: translateZ(0);
-              transform: translateZ(0);
-      opacity: 1;
-    }
+@-webkit-keyframes tracking-in-expand-fwd {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-transform: translateZ(-700px);
+    transform: translateZ(-700px);
+    opacity: 0;
   }
 
-  
-  
-  
+  40% {
+    opacity: 0.6;
+  }
 
-.titulo{
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
 
-    font-family: 'Autour One', sans-serif;
-    margin: 2rem;
-    text-align: center;
-    background: rgb(255, 205, 67) 100%;;
-    padding: 2rem;
-    width: 50rem;
-    border-radius: 2rem;
+@keyframes tracking-in-expand-fwd {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-transform: translateZ(-700px);
+    transform: translateZ(-700px);
+    opacity: 0;
+  }
 
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+  }
 }
 
 
-img{
 
-    width: 9rem;
-    border-radius: 2rem;
-    margin-left: 7rem;
-    border-style: outset;
+#titulo1 {
 
-}
-
-
-#titulo1{
-
-font-family: 'Autour One', sans-serif;
-background: rgb(255, 143, 38) 100%;
-border-radius: 1rem;
-padding: 1rem;
-width: 13rem;
+  font-family: 'Autour One', sans-serif;
+  background: rgb(255, 143, 38) 100%;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 13rem;
 
 }
 
 #text1 {
-	-webkit-animation: tracking-in-expand-fwd-bottom 5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: tracking-in-expand-fwd-bottom 5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  -webkit-animation: tracking-in-expand-fwd-bottom 5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-expand-fwd-bottom 5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
 /* ----------------------------------------------
@@ -124,110 +125,343 @@ width: 13rem;
  * animation tracking-in-expand-fwd-bottom
  * ----------------------------------------
  */
- @-webkit-keyframes tracking-in-expand-fwd-bottom {
-    0% {
-      letter-spacing: -0.5em;
-      -webkit-transform: translateZ(-700px) translateY(500px);
-              transform: translateZ(-700px) translateY(500px);
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: translateZ(0) translateY(0);
-              transform: translateZ(0) translateY(0);
-      opacity: 1;
-    }
+@-webkit-keyframes tracking-in-expand-fwd-bottom {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-transform: translateZ(-700px) translateY(500px);
+    transform: translateZ(-700px) translateY(500px);
+    opacity: 0;
   }
-  @keyframes tracking-in-expand-fwd-bottom {
-    0% {
-      letter-spacing: -0.5em;
-      -webkit-transform: translateZ(-700px) translateY(500px);
-              transform: translateZ(-700px) translateY(500px);
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: translateZ(0) translateY(0);
-              transform: translateZ(0) translateY(0);
-      opacity: 1;
-    }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes tracking-in-expand-fwd-bottom {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-transform: translateZ(-700px) translateY(500px);
+    transform: translateZ(-700px) translateY(500px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+
+#text1 {
+
+  margin: 2rem;
+  background: rgba(239, 148, 43, 0.224) 100%;
+  padding: 1rem;
+  width: 60rem;
+  text-align: justify;
+  border-radius: 1rem;
+
+}
+
+
+#titulo2 {
+
+  font-family: 'Autour One', sans-serif;
+  background: rgb(255, 143, 38) 100%;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 17rem;
+
+}
+
+#tr,
+th,
+td {
+  -webkit-animation: tracking-in-contract-bck-bottom 10s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-contract-bck-bottom 10s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2023-10-17 19:26:17
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation tracking-in-contract-bck-bottom
+ * ----------------------------------------
+ */
+@-webkit-keyframes tracking-in-contract-bck-bottom {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(300px);
+    transform: translateZ(400px) translateY(300px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes tracking-in-contract-bck-bottom {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(300px);
+    transform: translateZ(400px) translateY(300px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+
+tr,
+th,
+td {
+
+  margin: 2rem;
+  background: rgba(239, 148, 43, 0.224) 100%;
+  border-radius: 1rem;
+  padding: 1rem;
+  text-align: center;
+  width: 10%;
+
+
+}
+
+#titulo3 {
+
+  font-family: 'Autour One', sans-serif;
+  background: rgb(239, 147, 43) 100%;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 30rem;
+
+}
+
+#text3 {
+  -webkit-animation: tracking-in-contract-bck-bottom 15s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-contract-bck-bottom 15s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2023-10-17 19:29:59
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation tracking-in-contract-bck-bottom
+ * ----------------------------------------
+ */
+@-webkit-keyframes tracking-in-contract-bck-bottom {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(300px);
+    transform: translateZ(400px) translateY(300px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes tracking-in-contract-bck-bottom {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(300px);
+    transform: translateZ(400px) translateY(300px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+
+#text3 {
+
+  margin: 2rem;
+  background: rgba(239, 148, 43, 0.224) 100%;
+  padding: 1rem;
+  width: 25rem;
+  border-radius: 1rem;
+
+}
+
+#titulo4 {
+
+  font-family: 'Autour One', sans-serif;
+  background: rgb(239, 147, 43) 100%;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 12rem;
+
+}
+
+#text4 {
+  -webkit-animation: tracking-in-contract-bck-bottom 20s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-contract-bck-bottom 20s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2023-10-17 19:31:23
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation tracking-in-contract-bck-bottom
+ * ----------------------------------------
+ */
+@-webkit-keyframes tracking-in-contract-bck-bottom {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(300px);
+    transform: translateZ(400px) translateY(300px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes tracking-in-contract-bck-bottom {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px) translateY(300px);
+    transform: translateZ(400px) translateY(300px);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+
+#text4 {
+
+  margin: 2rem;
+  background: rgba(239, 148, 43, 0.224) 100%;
+  padding: 1rem;
+  width: 18rem;
+  border-radius: 2rem;
+
+}
+
+@media screen and (max-width: 480px) {
+  
+  body {
+
+    background: rgb(255, 115, 0);
+    background: linear-gradient(90deg, rgba(255, 115, 0, 1) 0%, rgba(255, 205, 0, 1) 50%,
+        rgba(255, 252, 131, 1) 100%);
+  
   }
   
+  #head {
 
-#text1{
+    font-family: 'Autour One', sans-serif;
+    margin-left: -5rem;
+    text-align: center;
+    padding: 1rem;
+    width: 20rem;
+    align-items: center;
+    display: grid;
+    grid-template-columns: 7,5rem 15pt;
+  
+  }
 
-margin: 2rem;
-background: rgba(239, 148, 43, 0.224) 100%;
-padding: 1rem;
-width: 60rem;
-text-align: justify;
-border-radius: 1rem;
+  .titulo {
 
-}
-
-
-#titulo2{
-
-font-family: 'Autour One', sans-serif;
-background: rgb(255, 143, 38) 100%;
-border-radius: 1rem;
-padding: 1rem;
-width: 17rem;
-
-}
-
-tr,th,td{
-
-margin: 2rem;
-background: rgba(239, 148, 43, 0.224) 100%;
-border-radius: 1rem;
-padding: 1rem;
-text-align: center;
-width: 10%;
-
-
-}
-
-#titulo3{
-
-font-family: 'Autour One', sans-serif;
-background: rgb(239, 147, 43) 100%;
-border-radius: 1rem;
-padding: 1rem;
-width: 30rem;
-
-}
-    
-#text3{
-
-    margin: 2rem;
-    background: rgba(239, 148, 43, 0.224) 100%;
+    font-family: 'Autour One', sans-serif;
+    margin: 1rem;
+    text-align: center;
+    background: rgb(255, 205, 67) 100%;
     padding: 1rem;
     width: 25rem;
     border-radius: 1rem;
-    
-    }
 
-#titulo4{
+  }
 
-font-family: 'Autour One', sans-serif;
-background: rgb(239, 147, 43) 100%;
-border-radius: 1rem;
-padding: 1rem;
-width: 12rem;
+  img {
 
-}
+    width: -3rem;
+    border-radius: 2rem;
+    margin-left: 5rem;
+    border-style: outset;
+  }
 
-#text4{
+  #text1 {
 
-    margin: 2rem;
+    margin: 1rem;
     background: rgba(239, 148, 43, 0.224) 100%;
     padding: 1rem;
-    width: 18rem;
-    border-radius: 2rem;
-    
-    }
+    width: 30rem;
+    text-align: justify;
+    border-radius: 1rem;
+  
+  }
+
+}
